Grace/tests/gibbs/errors/t219.grace
// ERROR = P1040
match(x)
   case

print "hi"
